# concatenator

./: .gitignore  CONCATENATION_APPROACHES.md  README.md  pyproject.toml  requirements.txt
datasets/: README.md
datasets/boyd-jazz/: 000000.midi  000001.midi  000002.midi  000003.midi  000004.midi  000005.midi  000006.midi  000007.midi  000008.midi  000009.midi  000010.midi  000011.midi  000012.midi  000013.midi  000014.midi  000015.midi  000016.midi  000017.midi  000018.midi  000019.midi  000020.midi  000021.midi  000022.midi  000023.midi  000024.midi  000025.midi  000026.midi  000027.midi  000028.midi  000029.midi  000030.midi  000031.midi  000032.midi  000033.midi  000034.midi  000035.midi  000036.midi  000037.midi  000038.midi  000039.midi  (+74 more)
datasets/ham/: Deceptive-9.midi  Superdominant-1.midi  Superdominant-10.midi  Superdominant-11.midi  Superdominant-12.midi  Superdominant-13.midi  Superdominant-2.midi  Superdominant-3.midi  Superdominant-4.midi  Superdominant-5.midi  Superdominant-6.midi  Superdominant-7.midi  Superdominant-8.midi  Superdominant-9.midi  Superdominant.midi
datasets/hanson/: Hanson-M2-projection-1.midi  Hanson-M2-projection-10.midi  Hanson-M2-projection-11.midi  Hanson-M2-projection-12.midi  Hanson-M2-projection-13.midi  Hanson-M2-projection-14.midi  Hanson-M2-projection-15.midi  Hanson-M2-projection-2.midi  Hanson-M2-projection-3.midi  Hanson-M2-projection-4.midi  Hanson-M2-projection-5.midi  Hanson-M2-projection-6.midi  Hanson-M2-projection-7.midi  Hanson-M2-projection-8.midi  Hanson-M2-projection-9.midi  (+37 more)
projects/: README.md  ilyaf.yaml  mamamia.yaml  mayer.yaml  rhcp.yaml  sarabande.yaml  takemitsu.yaml  whiteroom.yaml  wildrose.yaml
scripts/: concatenate_audio.py  concatenate_midi.py
(+285 files in other folders)
